# web-chat-app

./: .gitignore  LICENSE  README.md
app/: Cargo.toml  sqlite.db
app/src/: main.rs  models.rs  routes.rs
app/src/database/: init.rs
app/src/models/: message.rs
app/src/routes/: file.rs  home.rs  message.rs  mod.rs
app/src/templates/: templates.rs
app/static/: base.html  base.html.tera  base.js  index.html  index.html.tera  listen.js  main.css  messages.html
