[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_contrib = "0.4.11"
serde = "1.0.193"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tera = "1.19.1"

